--- a/kotlin/leetcode/191.md
+++ b/kotlin/leetcode/191.md
@@ -1,5 +1,6 @@
 ## Kotlin Leetcode - 191. Number of 1 Bits
-題目連接： <https://leetcode.com/problems/number-of-1-bits/>
+
+[題目連接](https://leetcode.com/problems/number-of-1-bits/)
 
 ```kotlin
 class Solution {
