--- a/kotlin/leetcode/1920.md
+++ b/kotlin/leetcode/1920.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1920. Build Array from Permutation
 
-題目連接：<https://leetcode.com/problems/build-array-from-permutation/>
+[題目連接](https://leetcode.com/problems/build-array-from-permutation/)
 
 ```kotlin
 class Solution {
