--- a/kotlin/leetcode/1929.md
+++ b/kotlin/leetcode/1929.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1929. Concatenation of Array
 
-題目連接：<https://leetcode.com/problems/concatenation-of-array/>
+[題目連接](https://leetcode.com/problems/concatenation-of-array/)
 
 ```kotlin
 class Solution {
