--- a/kotlin/leetcode/1952.md
+++ b/kotlin/leetcode/1952.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1952. Three Divisors
 
-題目連接：<https://leetcode.com/problems/three-divisors/>
+[題目連接](https://leetcode.com/problems/three-divisors/)
 
 ```kotlin
 class Solution {
