--- a/kotlin/leetcode/1979.md
+++ b/kotlin/leetcode/1979.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 1979. Find Greatest Common Divisor of Array
 
-題目連接：<https://leetcode.com/problems/find-greatest-common-divisor-of-array/>
+[題目連接](https://leetcode.com/problems/find-greatest-common-divisor-of-array/)
 
 ```kotlin
 class Solution {
