--- a/kotlin/leetcode/2.md
+++ b/kotlin/leetcode/2.md
@@ -1,5 +1,6 @@
 ## Kotlin Leetcode - 2. Add Two Numbers
-題目連接：<https://leetcode.com/problems/add-two-numbers/>
+
+[題目連接](https://leetcode.com/problems/add-two-numbers/)
 
 ```kotlin
 class Solution {
