--- a/kotlin/leetcode/20.md
+++ b/kotlin/leetcode/20.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 20. Valid Parentheses
 
-題目連接： <https://leetcode.com/problems/valid-parentheses/>
+[題目連接](https://leetcode.com/problems/valid-parentheses/)
 
 
 ```kotlin
