--- a/kotlin/leetcode/2000.md
+++ b/kotlin/leetcode/2000.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2000. Reverse Prefix of Word
 
-題目連接：<https://leetcode.com/problems/reverse-prefix-of-word/>
+[題目連接](https://leetcode.com/problems/reverse-prefix-of-word/)
 
 ```kotlin
 class Solution {
