--- a/kotlin/leetcode/2011.md
+++ b/kotlin/leetcode/2011.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2011. Final Value of Variable After Performing Operations
 
-題目連接：<https://leetcode.com/problems/final-value-of-variable-after-performing-operations/>
+[題目連接](https://leetcode.com/problems/final-value-of-variable-after-performing-operations/)
 
 ```kotlin
 class Solution {
@@ -21,6 +21,8 @@ class Solution {
 減去剩餘元素的個數
 
 就可以得到答案
+
+## Kotlin 參考解答
 
 ```kotlin
 class Solution {
