--- a/kotlin/leetcode/202.md
+++ b/kotlin/leetcode/202.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 202. Happy Number
 
-題目連接：<https://leetcode.com/problems/happy-number/>
+[題目連接](https://leetcode.com/problems/happy-number/)
 
 ```kotlin
 class Solution {
