--- a/kotlin/leetcode/2032.md
+++ b/kotlin/leetcode/2032.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2032. Two Out of Three
 
-題目連接：<https://leetcode.com/problems/two-out-of-three/>
+[題目連接](https://leetcode.com/problems/two-out-of-three/)
 
 ```kotlin
 class Solution {
@@ -36,8 +36,6 @@ class Solution {
         }
 }
 ```
-
-
 
 </details>
 
