--- a/kotlin/leetcode/2037.md
+++ b/kotlin/leetcode/2037.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2037. Minimum Number of Moves to Seat Everyone
 
-題目連接：<https://leetcode.com/problems/minimum-number-of-moves-to-seat-everyone/>
+[題目連接](https://leetcode.com/problems/minimum-number-of-moves-to-seat-everyone/)
 
 ```kotlin
 class Solution {
