--- a/kotlin/leetcode/205.md
+++ b/kotlin/leetcode/205.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 205. Isomorphic Strings
 
-題目連接：<https://leetcode.com/problems/isomorphic-strings/>
+[題目連接](https://leetcode.com/problems/isomorphic-strings/)
 
 ```kotlin
 class Solution {
