--- a/kotlin/leetcode/206.md
+++ b/kotlin/leetcode/206.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 206. Reverse Linked List
 
-題目連接：<https://leetcode.com/problems/reverse-linked-list/>
+[題目連接](https://leetcode.com/problems/reverse-linked-list/)
 
 ```kotlin
 /**
