--- a/kotlin/leetcode/21.md
+++ b/kotlin/leetcode/21.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 21. Merge Two Sorted Lists
 
-題目連接： <https://leetcode.com/problems/merge-two-sorted-lists/>
+[題目連接](https://leetcode.com/problems/merge-two-sorted-lists/)
 
 ```kotlin
 /**
