--- a/kotlin/leetcode/2114.md
+++ b/kotlin/leetcode/2114.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2114. Maximum Number of Words Found in Sentences
 
-題目連接：<https://leetcode.com/problems/maximum-number-of-words-found-in-sentences/>
+[題目連接](https://leetcode.com/problems/maximum-number-of-words-found-in-sentences/)
 
 ```kotlin
 class Solution {
