--- a/kotlin/leetcode/2160.md
+++ b/kotlin/leetcode/2160.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2160. Minimum Sum of Four Digit Number After Splitting Digits
 
-題目連接：<https://leetcode.com/problems/minimum-sum-of-four-digit-number-after-splitting-digits/>
+[題目連接](https://leetcode.com/problems/minimum-sum-of-four-digit-number-after-splitting-digits/)
 
 ```kotlin
 class Solution {  
