--- a/kotlin/leetcode/217.md
+++ b/kotlin/leetcode/217.md
@@ -1,7 +1,6 @@
 ## Kotlin Leetcode - 217. Contains Duplicate
 
-題目連接：<https://leetcode.com/problems/contains-duplicate/>
-
+[題目連接](https://leetcode.com/problems/contains-duplicate/)
 
 ```kotlin
 class Solution {
