--- a/kotlin/leetcode/2194.md
+++ b/kotlin/leetcode/2194.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2194. Cells in a Range on an Excel Sheet
 
-題目連接：<https://leetcode.com/problems/cells-in-a-range-on-an-excel-sheet/>
+[題目連接](https://leetcode.com/problems/cells-in-a-range-on-an-excel-sheet/)
 
 ```kotlin
 class Solution {
