--- a/kotlin/leetcode/2220.md
+++ b/kotlin/leetcode/2220.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2220. Minimum Bit Flips to Convert Number
 
-題目連接：<https://leetcode.com/problems/minimum-bit-flips-to-convert-number/>
+[題目連接](https://leetcode.com/problems/minimum-bit-flips-to-convert-number/)
 
 ```kotlin
 class Solution {
