--- a/kotlin/leetcode/2235.md
+++ b/kotlin/leetcode/2235.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2235. Add Two Integers
 
-題目連接：<https://leetcode.com/problems/add-two-integers/>
+[題目連接](https://leetcode.com/problems/add-two-integers/)
 
 ```kotlin
 class Solution {
