--- a/kotlin/leetcode/2236.md
+++ b/kotlin/leetcode/2236.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2236. Root Equals Sum of Children
 
-題目連接：<https://leetcode.com/problems/root-equals-sum-of-children/>
+[題目連接](https://leetcode.com/problems/root-equals-sum-of-children/)
 
 ```kotlin
 class Solution {
