--- a/kotlin/leetcode/225.md
+++ b/kotlin/leetcode/225.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 225. Implement Stack using Queues
 
-題目連接：<https://leetcode.com/problems/implement-stack-using-queues/>
+[題目連接](https://leetcode.com/problems/implement-stack-using-queues/)
 
 ```kotlin
 class MyStack() {
