--- a/kotlin/leetcode/226.md
+++ b/kotlin/leetcode/226.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 226. Invert Binary Tree
 
-題目連接：<https://leetcode.com/problems/invert-binary-tree/>
+[題目連接](https://leetcode.com/problems/invert-binary-tree/)
 
 ```kotlin
 class Solution {
