--- a/kotlin/leetcode/231.md
+++ b/kotlin/leetcode/231.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 231. Power of Two
 
-題目連接： <https://leetcode.com/problems/power-of-two/>
+[題目連接](https://leetcode.com/problems/power-of-two/)
 
 
 ```kotlin
