--- a/kotlin/leetcode/2315.md
+++ b/kotlin/leetcode/2315.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2315. Count Asterisks
 
-題目連接：<https://leetcode.com/problems/count-asterisks/>
+[題目連接](https://leetcode.com/problems/count-asterisks/)
 
 ```kotlin
 class Solution {
