--- a/kotlin/leetcode/232.md
+++ b/kotlin/leetcode/232.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 232. Implement Queue using Stacks
 
-題目連接：<https://leetcode.com/problems/implement-queue-using-stacks/>
+[題目連接](https://leetcode.com/problems/implement-queue-using-stacks/)
 
 ```kotlin
 class MyQueue() {
