--- a/kotlin/leetcode/2325.md
+++ b/kotlin/leetcode/2325.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2325. Decode the Message
 
-題目連接：<https://leetcode.com/problems/decode-the-message/>
+[題目連接](https://leetcode.com/problems/decode-the-message/)
 
 ```kotlin
 class Solution {
