--- a/kotlin/leetcode/234.md
+++ b/kotlin/leetcode/234.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 234. Palindrome Linked List
 
-題目連接：<https://leetcode.com/problems/palindrome-linked-list/>
+[題目連接](https://leetcode.com/problems/palindrome-linked-list/)
 
 ```kotlin
 class Solution {
