--- a/kotlin/leetcode/2357.md
+++ b/kotlin/leetcode/2357.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2357. Make Array Zero by Subtracting Equal Amounts
 
-題目連接：<https://leetcode.com/problems/make-array-zero-by-subtracting-equal-amounts/>
+[題目連接](https://leetcode.com/problems/make-array-zero-by-subtracting-equal-amounts/)
 
 ```kotlin
 class Solution {
