--- a/kotlin/leetcode/2367.md
+++ b/kotlin/leetcode/2367.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2367. Number of Arithmetic Triplets
 
-題目連接：<https://leetcode.com/problems/number-of-arithmetic-triplets/>
+[題目連接](https://leetcode.com/problems/number-of-arithmetic-triplets/)
 
 ```kotlin
 class Solution {
