--- a/kotlin/leetcode/2396.md
+++ b/kotlin/leetcode/2396.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2396. Strictly Palindromic Number
 
-題目連接：<https://leetcode.com/problems/strictly-palindromic-number/>
+[題目連接](https://leetcode.com/problems/strictly-palindromic-number/)
 
 ```kotlin
 class Solution {
