--- a/kotlin/leetcode/2413.md
+++ b/kotlin/leetcode/2413.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2413. Smallest Even Multiple
 
-題目連接：<https://leetcode.com/problems/smallest-even-multiple/>
+[題目連接](https://leetcode.com/problems/smallest-even-multiple/)
 
 ```kotlin
 class Solution {
