--- a/kotlin/leetcode/2418.md
+++ b/kotlin/leetcode/2418.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2418. Sort the People
 
-題目連接：<https://leetcode.com/problems/sort-the-people/>
+[題目連接](https://leetcode.com/problems/sort-the-people/)
 
 ```kotlin
 class Solution {
