--- a/kotlin/leetcode/242.md
+++ b/kotlin/leetcode/242.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 242. Valid Anagram
 
-題目連接：<https://leetcode.com/problems/valid-anagram/>
+[題目連接](https://leetcode.com/problems/valid-anagram/)
 
 ```kotlin
 class Solution {
