--- a/kotlin/leetcode/2469.md
+++ b/kotlin/leetcode/2469.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2469. Convert the Temperature
 
-題目連接：<https://leetcode.com/problems/convert-the-temperature/>
+[題目連接](https://leetcode.com/problems/convert-the-temperature/)
 
 ```kotlin
 class Solution {
