--- a/kotlin/leetcode/2520.md
+++ b/kotlin/leetcode/2520.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2520. Count the Digits That Divide a Number
 
-題目連接：<https://leetcode.com/problems/count-the-digits-that-divide-a-number/>
+[題目連接](https://leetcode.com/problems/count-the-digits-that-divide-a-number/)
 
 ```kotlin
 class Solution {
