--- a/kotlin/leetcode/2535.md
+++ b/kotlin/leetcode/2535.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 2535. Difference Between Element Sum and Digit Sum of an Array
 
-題目連接：<https://leetcode.com/problems/difference-between-element-sum-and-digit-sum-of-an-array/>
+[題目連接](https://leetcode.com/problems/difference-between-element-sum-and-digit-sum-of-an-array/)
 
 ```kotlin
 class Solution {
