--- a/kotlin/leetcode/258.md
+++ b/kotlin/leetcode/258.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 258. Add Digits
 
-題目連接：<https://leetcode.com/problems/add-digits/>
+[題目連接](https://leetcode.com/problems/add-digits/)
 
 ```kotlin
 class Solution {
