--- a/kotlin/leetcode/26.md
+++ b/kotlin/leetcode/26.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 26. Remove Duplicates from Sorted Array
 
-題目連接： <https://leetcode.com/problems/remove-duplicates-from-sorted-array/>
+[題目連接](https://leetcode.com/problems/remove-duplicates-from-sorted-array/)
 
 ```kotlin
 class Solution {
