--- a/kotlin/leetcode/268.md
+++ b/kotlin/leetcode/268.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 268. Missing Number
 
-題目連接：<https://leetcode.com/problems/missing-number/>
+[題目連接](https://leetcode.com/problems/missing-number/)
 
 ```kotlin
 class Solution {
