--- a/kotlin/leetcode/27.md
+++ b/kotlin/leetcode/27.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 27. Remove Element
 
-題目連接：<https://leetcode.com/problems/remove-element/>
+[題目連接](https://leetcode.com/problems/remove-element/)
 
 ```kotlin
 class Solution {
