--- a/kotlin/leetcode/278.md
+++ b/kotlin/leetcode/278.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 278. First Bad Version
 
-題目連接：<https://leetcode.com/problems/first-bad-version/>
+[題目連接](https://leetcode.com/problems/first-bad-version/)
 
 ```kotlin
 class Solution: VersionControl() {
