--- a/kotlin/leetcode/28.md
+++ b/kotlin/leetcode/28.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 28. Implement strStr()
 
-題目連接：<https://leetcode.com/problems/implement-strstr/>
+[題目連接](https://leetcode.com/problems/implement-strstr/)
 
 ```kotlin
 class Solution {
