--- a/kotlin/leetcode/326.md
+++ b/kotlin/leetcode/326.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 326. Power of Three
 
-題目連接：<https://leetcode.com/problems/power-of-three/>
+[題目連接](https://leetcode.com/problems/power-of-three/)
 
 ```kotlin
 class Solution {
