--- a/kotlin/leetcode/338.md
+++ b/kotlin/leetcode/338.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 338. Counting Bits
 
-題目連接：<https://leetcode.com/problems/counting-bits/>
+[題目連接](https://leetcode.com/problems/counting-bits/)
 
 ```kotlin
 class Solution {
