--- a/kotlin/leetcode/342.md
+++ b/kotlin/leetcode/342.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 342. Power of Four
 
-題目連接：<https://leetcode.com/problems/power-of-four/>
+[題目連接](https://leetcode.com/problems/power-of-four/)
 
 ```kotlin
 class Solution {
