--- a/kotlin/leetcode/344.md
+++ b/kotlin/leetcode/344.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 344. Reverse String
 
-題目連接：<https://leetcode.com/problems/reverse-string/>
+[題目連接](https://leetcode.com/problems/reverse-string/)
 
 ```kotlin
 class Solution {
