--- a/kotlin/leetcode/35.md
+++ b/kotlin/leetcode/35.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 35. Search Insert Position
 
-題目連接：<https://leetcode.com/problems/search-insert-position/>
+[題目連接](https://leetcode.com/problems/search-insert-position/)
 
 ```kotlin
 class Solution {
