--- a/kotlin/leetcode/371.md
+++ b/kotlin/leetcode/371.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 371. Sum of Two Integers
 
-題目連接：<https://leetcode.com/problems/sum-of-two-integers/>
+[題目連接](https://leetcode.com/problems/sum-of-two-integers/)
 
 
 ```kotlin
