--- a/kotlin/leetcode/383.md
+++ b/kotlin/leetcode/383.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 383. Ransom Note
 
-題目連接：<https://leetcode.com/problems/ransom-note/>
+[題目連接](https://leetcode.com/problems/ransom-note/)
 
 ```kotlin
 class Solution {
