--- a/kotlin/leetcode/404.md
+++ b/kotlin/leetcode/404.md
@@ -1,5 +1,6 @@
 ## Kotlin Leetcode - 404. Sum of Left Leaves
-題目連接： <https://leetcode.com/problems/sum-of-left-leaves/>
+
+[題目連接](https://leetcode.com/problems/sum-of-left-leaves/)
 
 ```kotlin
 class Solution {
