--- a/kotlin/leetcode/412.md
+++ b/kotlin/leetcode/412.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 412. Fizz Buzz
 
-題目連接：<https://leetcode.com/problems/fizz-buzz/>
+[題目連接](https://leetcode.com/problems/fizz-buzz/)
 
 ```kotlin
 class Solution {
