--- a/kotlin/leetcode/461.md
+++ b/kotlin/leetcode/461.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 461. Hamming Distance
 
-題目連接：<https://leetcode.com/problems/hamming-distance/>
+[題目連接](https://leetcode.com/problems/hamming-distance/)
 
 ```kotlin
 class Solution {
