--- a/kotlin/leetcode/470.md
+++ b/kotlin/leetcode/470.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 470. Implement Rand10() Using Rand7()
 
-題目連接：<https://leetcode.com/problems/implement-rand10-using-rand7/>
+[題目連接](https://leetcode.com/problems/implement-rand10-using-rand7/)
 
 ```kotlin
 /**
