--- a/kotlin/leetcode/476.md
+++ b/kotlin/leetcode/476.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 476. Number Complement
 
-題目連接：<https://leetcode.com/problems/number-complement/>
+[題目連接](https://leetcode.com/problems/number-complement/)
 
 ```kotlin
 class Solution {
