--- a/kotlin/leetcode/500.md
+++ b/kotlin/leetcode/500.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 500. Keyboard Row
 
-題目連接：<https://leetcode.com/problems/keyboard-row/>
+[題目連接](https://leetcode.com/problems/keyboard-row/)
 
 ```kotlin
 class Solution {
