--- a/kotlin/leetcode/509.md
+++ b/kotlin/leetcode/509.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 509. Fibonacci Number
 
-題目連接：<https://leetcode.com/problems/fibonacci-number/>
+[題目連接](https://leetcode.com/problems/fibonacci-number/)
 
 ```kotlin
 class Solution {
