--- a/kotlin/leetcode/520.md
+++ b/kotlin/leetcode/520.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 520. Detect Capital
 
-題目連接：<https://leetcode.com/problems/detect-capital/>
+[題目連接](https://leetcode.com/problems/detect-capital/)
 
 ```kotlin
 class Solution {
