--- a/kotlin/leetcode/535.md
+++ b/kotlin/leetcode/535.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 535. Encode and Decode TinyURL
 
-題目連接：<https://leetcode.com/problems/encode-and-decode-tinyurl/>
+[題目連接](https://leetcode.com/problems/encode-and-decode-tinyurl/)
 
 ```kotlin
 class Codec() {
