--- a/kotlin/leetcode/572.md
+++ b/kotlin/leetcode/572.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 572. Subtree of Another Tree
 
-題目連接：<https://leetcode.com/problems/subtree-of-another-tree/>
+[題目連接](https://leetcode.com/problems/subtree-of-another-tree/)
 
 ```kotlin
 class Solution {
