--- a/kotlin/leetcode/58.md
+++ b/kotlin/leetcode/58.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 58. Length of Last Word
 
-題目連接：<https://leetcode.com/problems/length-of-last-word/>
+[題目連接](https://leetcode.com/problems/length-of-last-word/)
 
 ```kotlin
 class Solution {
