--- a/kotlin/leetcode/617.md
+++ b/kotlin/leetcode/617.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 617. Merge Two Binary Trees
 
-題目連接：<https://leetcode.com/problems/merge-two-binary-trees/>
+[題目連接](https://leetcode.com/problems/merge-two-binary-trees/)
 
 ```kotlin
 /**
