--- a/kotlin/leetcode/657.md
+++ b/kotlin/leetcode/657.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 657. Robot Return to Origin
 
-題目連接：<https://leetcode.com/problems/robot-return-to-origin/>
+[題目連接](https://leetcode.com/problems/robot-return-to-origin/)
 
 ```kotlin
 class Solution {
