--- a/kotlin/leetcode/66.md
+++ b/kotlin/leetcode/66.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 66. Plus One
 
-題目連接： <https://leetcode.com/problems/plus-one/>
+[題目連接](https://leetcode.com/problems/plus-one/)
 
 ```kotlin
 class Solution {
