--- a/kotlin/leetcode/67.md
+++ b/kotlin/leetcode/67.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 67. Add Binary
 
-題目連接：<https://leetcode.com/problems/add-binary/>
+[題目連接](https://leetcode.com/problems/add-binary/)
 
 ```kotlin
 class Solution {
