--- a/kotlin/leetcode/69.md
+++ b/kotlin/leetcode/69.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 69. Sqrt(x)
 
-題目連接： <https://leetcode.com/problems/sqrtx/>
+[題目連接](https://leetcode.com/problems/sqrtx/)
 
 ```kotlin
 class Solution {
