--- a/kotlin/leetcode/7.md
+++ b/kotlin/leetcode/7.md
@@ -1,7 +1,6 @@
 ## Kotlin Leetcode - 7. Reverse Integer
 
-題目連接： <https://leetcode.com/problems/reverse-integer/>
-
+[題目連接](https://leetcode.com/problems/reverse-integer/)
 
 ```kotlin
 class Solution {
