--- a/kotlin/leetcode/70.md
+++ b/kotlin/leetcode/70.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 70. Climbing Stairs
 
-題目連接：<https://leetcode.com/problems/climbing-stairs/>
+[題目連接](https://leetcode.com/problems/climbing-stairs/)
 
 ```kotlin
 class Solution {
