--- a/kotlin/leetcode/704.md
+++ b/kotlin/leetcode/704.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 704. Binary Search
 
-題目連接：<https://leetcode.com/problems/binary-search/>
+[題目連接](https://leetcode.com/problems/binary-search/)
 
 ```kotlin
 class Solution {
