--- a/kotlin/leetcode/771.md
+++ b/kotlin/leetcode/771.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 771. Jewels and Stones
 
-題目連接： <https://leetcode.com/problems/jewels-and-stones/>
+[題目連接](https://leetcode.com/problems/jewels-and-stones/)
 
 ```kotlin
 class Solution {
