--- a/kotlin/leetcode/804.md
+++ b/kotlin/leetcode/804.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 804. Unique Morse Code Words
 
-題目連接：<https://leetcode.com/problems/unique-morse-code-words/>
+[題目連接](https://leetcode.com/problems/unique-morse-code-words/)
 
 ```kotlin
 class Solution {
