--- a/kotlin/leetcode/804.md
+++ b/kotlin/leetcode/804.md
@@ -23,7 +23,34 @@ class Solution {
 ```kotlin
 class Solution {
     fun uniqueMorseRepresentations(words: Array<String>): Int {
-        val morseDictionary = arrayOf(".-", "-...", "-.-.", "-..", ".", "..-.", "--.", "....", "..", ".---", "-.-", ".-..", "--", "-.", "---", ".--.", "--.-", ".-.", "...", "-", "..-", "...-", ".--", "-..-", "-.--", "--..")
+        val morseDictionary = arrayOf(
+            ".-",
+            "-...",
+            "-.-.",
+            "-..",
+            ".",
+            "..-.",
+            "--.",
+            "....",
+            "..",
+            ".---",
+            "-.-",
+            ".-..",
+            "--",
+            "-.",
+            "---",
+            ".--.",
+            "--.-",
+            ".-.",
+            "...",
+            "-",
+            "..-",
+            "...-",
+            ".--",
+            "-..-",
+            "-.--",
+            "--.."
+        )
 
         return words.map { it.map { c -> morseDictionary[c - 'a'] }.joinToString("") }
                 .toSet().size
