--- a/kotlin/leetcode/83.md
+++ b/kotlin/leetcode/83.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 83. Remove Duplicates from Sorted List
 
-題目連接：<https://leetcode.com/problems/remove-duplicates-from-sorted-list/>
+[題目連接](https://leetcode.com/problems/remove-duplicates-from-sorted-list/)
 
 ```kotlin
 class Solution {
