--- a/kotlin/leetcode/832.md
+++ b/kotlin/leetcode/832.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 832. Flipping an Image
 
-題目連接：<https://leetcode.com/problems/flipping-an-image/>
+[題目連接](https://leetcode.com/problems/flipping-an-image/)
 
 ```kotlin
 class Solution {
