--- a/kotlin/leetcode/876.md
+++ b/kotlin/leetcode/876.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 876. Middle of the Linked List
 
-題目連接：<https://leetcode.com/problems/middle-of-the-linked-list/>
+[題目連接](https://leetcode.com/problems/middle-of-the-linked-list/)
 
 ```kotlin
 class Solution {
