--- a/kotlin/leetcode/88.md
+++ b/kotlin/leetcode/88.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 88. Merge Sorted Array
 
-題目連接：<https://leetcode.com/problems/merge-sorted-array/>
+[題目連接](https://leetcode.com/problems/merge-sorted-array/)
 
 ```kotlin
 class Solution {
