--- a/kotlin/leetcode/9.md
+++ b/kotlin/leetcode/9.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 9. Palindrome Number
 
-題目連接： <https://leetcode.com/problems/palindrome-number/>
+[題目連接](https://leetcode.com/problems/palindrome-number/)
 
 ```kotlin
 class Solution {
