--- a/kotlin/leetcode/965.md
+++ b/kotlin/leetcode/965.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 965. Univalued Binary Tree
 
-題目連接：<https://leetcode.com/problems/univalued-binary-tree/>
+[題目連接](https://leetcode.com/problems/univalued-binary-tree/)
 
 ```kotlin
 /**
