--- a/kotlin/leetcode/977.md
+++ b/kotlin/leetcode/977.md
@@ -1,6 +1,6 @@
 ## Kotlin Leetcode - 977. Squares of a Sorted Array
 
-題目連接：<https://leetcode.com/problems/squares-of-a-sorted-array/>
+[題目連接](https://leetcode.com/problems/squares-of-a-sorted-array/)
 
 ```kotlin
 class Solution {
