--- a/kotlin/leetcode/2942.md
+++ b/kotlin/leetcode/2942.md
@@ -22,7 +22,8 @@ class Solution {
 
 ```kotlin
 class Solution {
-    fun findWordsContaining(words: Array<String>, x: Char): List<Int> = (0 until words.size).filter { x in words[it] }
+    fun findWordsContaining(words: Array<String>, x: Char): List<Int> = (0 until words.size)
+        .filter { x in words[it] }
 }
 ```
 
@@ -30,7 +31,8 @@ class Solution {
 
 ```kotlin
 class Solution {
-    fun findWordsContaining(words: Array<String>, x: Char): List<Int> = words.indices.filter { x in words[it] }
+    fun findWordsContaining(words: Array<String>, x: Char): List<Int> = words.indices
+        .filter { x in words[it] }
 }
 ```
 
